fix visualisation details on details page

--- a/checkout.html
+++ b/checkout.html
@@ -7,8 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <title>checkout-page</title>
-    <link rel="stylesheet" type="text/css" href="header_footer.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="checkout.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="./CSS/header_footer.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="./CSS/checkout.css" media="screen">
 </head>
 
 <body>
