--- a/cart.html
+++ b/cart.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>cart</title>
-    <link rel="stylesheet" type="text/css" href="header_footer.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="cart.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="./CSS/header_footer.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="./CSS/cart.css" media="screen">
 </head>
 
 <body>
